2009-08-10  Helmut Eller  <heller@common-lisp.net>

	Various compilation related changes.

	* slime.el (slime-show-note-counts): Don't show 0 values.
	(slime-severity<): New function.
	(slime-maybe-show-compilation-log): Always create the log buffer
	but display it only if the compilation failed.
	(slime-insert-compilation-log): Disable the stupidly inefficient
	font-lock-after-change-function.
	(slime-canonicalized-location-to-string): Use relative filenames.
	(slime-goto-location-buffer): Disable warnings about symlinks.

2009-08-09  Tobias C. Rittweiler  <tcr@freebits.de>

	Make C-x ` work again.

	M-n and C-x ` are now very similiar; but the former operates
	relative to point in the source buffer, while the latter works
	relative to the compilation log.

	* slime.el (slime-insert-compilation-log): No do set
	`compilation-skip-to-next-location'.

2009-08-09  Tobias C. Rittweiler  <tcr@freebits.de>

	M-n/M-p in .lisp buffers do not show the note in the minibuffer
	anymore if a compilation log is displayed to the user.

	In the compilation log, sort and group the notes by line/column
	number.

	* slime.el (slime-insert-compilation-log): Sort the notes by their
	line/column numbers; group notes of same location and display them
	as one entry.
	(slime-compilation-loc): Removed.
	(slime-canonicalized-location),
	(slime-canonicalized-location-to-string): Extracted from
	`slime-compilation-loc'.
	(slime-group-and-sort-notes): Does the sorting/grouping.
	(slime-show-note): Do not show note in minibuffer if compilation
	log is displayed to the user.

2009-08-09  Stas Boukarev  <stassats@gmail.com>

	* swank.asd (asdf:perform): don't call `swank-loader:init' with
	:setup nil, because it doesn't get contribs compiled, and some other
	configuration steps are omitted.

	* slime.el (slime-profile-by-substring): new function for profiling
	functions by matching a substring.

	* swank.lisp (profile-by-substring): ditto.

2009-08-08  Tobias C. Rittweiler  <tcr@freebits.de>
